couchbase/resources/service-monitor.yaml
#---
#apiVersion: monitoring.coreos.com/v1
#kind: ServiceMonitor
#metadata:
#  labels:
#    k8s-app: couchbase
#  name: couchbase
#  namespace: monitoring
#spec:
#  endpoints:
#  - interval: 30s
#    port: "9091"
#    scheme: HTTP
#  jobLabel: k8s-app
#  selector:
#    matchLabels:
#      app: couchbase
---
apiVersion: v1
kind: Service
metadata:
  name: couchbase-metrics
  namespace: default 
  labels:
    app: couchbase
spec:
  ports:
  - name: metrics
    port: 9091 
    protocol: TCP
  selector:
    app: couchbase
    couchbase_cluster: cb-example
